# qrcode_scanner-rs

./: Cargo.toml  README.md
.github/workflows/: rustfmt.yml  test.yml
src/: image_decode.rs  lib.rs  main.rs
tests/files/image_decode/: MJPG_1_in  MJPG_1_raw  YUYV_1_in  YUYV_1_raw
tests/files/lib/: MJPG_1_in  YUYV_1_in
