[package]
name = "qrcode_scanner"
version = "0.1.0"
edition = "2021"
authors = ["Simon Brand <simon.brand@postadigitale.de>"]
license = "MIT"
keywords = ["QR-Code", "qrcode", "Scaner", "scan"]
categories = ["computer-vision", "multimedia", "multimedia::video"]
description = "Scan qr-codes from video4linux devices"
homepage = "https://github.com/brandsimon/qrcode_scanner-rs"
repository = "https://github.com/brandsimon/qrcode_scanner-rs"

[dependencies]
anyhow = "1.0"
bardecoder = "0.5"
ffimage = "0.9"
log = "0.4"
ffimage_yuv = "0.9"
image = "0.24"
v4l = "0.14"
