[package]
name = "qrcode_scanner"
version = "0.3.2"
edition = "2021"
authors = ["Simon Brand <simon.brand@postadigitale.de>"]
license = "MIT"
keywords = ["QR-Code", "qrcode", "Scanner", "scan"]
categories = ["computer-vision", "multimedia", "multimedia::video"]
description = "Scan qr-codes from video4linux devices"
homepage = "https://github.com/brandsimon/qrcode_scanner-rs"
repository = "https://github.com/brandsimon/qrcode_scanner-rs"

[dependencies]
ffimage = "0.10"
ffimage_yuv = "0.10"
image = "0.25"
log = "0.4"
rxing = "0.7"
v4l = "0.14"
